Fixing bug 312232. getScreenCTM fails in xulrunner builds due to uninitialized nsresult. Patched by Rob Adams <readams@readams.net>, r=me, sr=tor@acm.org